--- a/Team.html
+++ b/Team.html
@@ -63,9 +63,9 @@
         <h6 class="u-align-center u-custom-font u-text u-text-default u-text-2"> Nikhilesh Kss</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-3">Johan Sebastian</h6>
         <h6 class="u-align-center-xs u-custom-font u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">kayal jeyaseelan</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-5">organizer</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-6"> Executive Producer</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-7">co-organizer</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-5">co-organizer</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-6">organizer</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-7"> Executive Producer</h6>
         <img class="u-image u-image-circle u-image-4" src="images/WhatsAppImage2023-10-18at21.16.17_d8ca4509.jpg" alt="" data-image-width="377" data-image-height="520">
         <img class="u-image u-image-circle u-image-5" src="images/311889191_1251990822415769_6333576377281548331_n.jpg" alt="" data-image-width="640" data-image-height="640">
         <img class="u-image u-image-circle u-image-6" src="images/WhatsAppImage2023-10-23at18.05.32_31645aaa.jpg" alt="" data-image-width="1076" data-image-height="1280">
@@ -75,15 +75,21 @@
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-11"> Production</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-12"> Operations</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-13"> Operations</h6>
-        <img class="u-image u-image-circle u-image-7" src="images/WhatsAppImage2023-10-21at18.59.04_65d14c6f.jpg" alt="" data-image-width="768" data-image-height="1024">
-        <img class="u-image u-image-circle u-image-8" src="images/WhatsAppImage2023-10-24at20.46.11_0fe4030f.jpg" alt="" data-image-width="3024" data-image-height="4032">
-        <img class="u-image u-image-circle u-image-9" src="images/WhatsAppImage2023-10-21at22.41.30_ac980509.jpg" alt="" data-image-width="1200" data-image-height="1600">
+        <img class="u-image u-image-circle u-image-7" src="images/WhatsAppImage2023-10-24at20.46.11_0fe4030f.jpg" alt="" data-image-width="3024" data-image-height="4032">
+        <img class="u-image u-image-circle u-image-8" src="images/WhatsAppImage2023-10-21at22.41.30_ac980509.jpg" alt="" data-image-width="1200" data-image-height="1600">
+        <img class="u-image u-image-circle u-image-9" src="images/WhatsAppImage2023-10-25at16.47.03_afa65cb9.jpg" alt="" data-image-width="1200" data-image-height="1600">
         <h6 class="u-custom-font u-text u-text-default u-text-14">keegan d'silva</h6>
-        <h6 class="u-custom-font u-text u-text-default u-text-15">Rijul menon</h6>
+        <h6 class="u-custom-font u-text u-text-default u-text-15">Resa joseph</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-16">Anurag Sharma</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-17">Speaker Coordinator</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-18">marketing</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-17">marketing</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-18">Media</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-19">Media</h6>
+        <img class="u-image u-image-circle u-image-10" src="images/IMG_4934.jpeg" alt="" data-image-width="2432" data-image-height="3843">
+        <img class="u-image u-image-circle u-image-11" src="images/WhatsAppImage2023-10-21at18.59.04_65d14c6f.jpg" alt="" data-image-width="768" data-image-height="1024">
+        <h6 class="u-custom-font u-text u-text-default u-text-20">Harsh Rajesh</h6>
+        <h6 class="u-custom-font u-text u-text-default u-text-21">Rijul menon</h6>
+        <h6 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-custom-font u-text u-text-custom-color-2 u-text-default u-text-22">Speaker Coordinator</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-23">Speaker Coordinator</h6>
       </div>
     </section>
     
