--- a/index.html
+++ b/index.html
@@ -89,30 +89,30 @@ TEDx community">
     <section class="u-black u-clearfix u-section-1" id="sec-370f">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-xs u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
-        <div class="u-align-center-xs u-countdown u-countdown-1" data-timer-id="7f74" data-type="to-date" data-target-date="Wed, 25 Oct 2023 20:00:52 GMT" data-for="everyone" data-direction="down" data-animation-name="customAnimationIn" data-animation-duration="1000" data-time-left="750m" data-target-number="100" data-start-time="Sat Sep 23 2023 18:37:44 GMT+0400 (Arabian Standard Time)" data-frequency="1s" data-after-count="none" data-redirect-url="https://">
+        <div class="u-align-center-xs u-countdown u-countdown-1" data-timer-id="7f74" data-type="to-date" data-target-date="Thu, 26 Oct 2023 05:00:52 GMT" data-for="everyone" data-direction="down" data-animation-name="customAnimationIn" data-animation-duration="1000" data-time-left="750m" data-target-number="100" data-start-time="Sat Sep 23 2023 18:37:44 GMT+0400 (Arabian Standard Time)" data-frequency="1s" data-after-count="none" data-redirect-url="https://">
           <div class="u-countdown-wrapper u-spacing-20">
             <div class="u-countdown-item u-countdown-years u-hidden u-spacing-10">
               <div class="u-countdown-counter u-custom-font u-countdown-counter-1"><div class="u-countdown-number">0</div><div class="u-countdown-number u-hidden">0</div></div>
               <div class="u-countdown-label u-custom-font u-countdown-label-1">Years</div>
             </div>
             <div class="u-countdown-separator u-custom-font u-hidden u-countdown-separator-1">:</div>
-            <div class="u-countdown-days u-countdown-item u-spacing-10">
-              <div class="u-countdown-counter u-custom-font u-countdown-counter-2"><div class="u-countdown-number">7</div><div class="u-countdown-number u-hidden">4</div><div class="u-countdown-number u-hidden">0</div></div>
+            <div class="u-countdown-days u-countdown-item u-hidden u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-2"><div class="u-countdown-number">0</div><div class="u-countdown-number u-hidden">4</div><div class="u-countdown-number u-hidden">0</div></div>
               <div class="u-countdown-label u-custom-font u-countdown-label-2">Days</div>
             </div>
-            <div class="u-countdown-separator u-custom-font u-countdown-separator-2">:</div>
+            <div class="u-countdown-separator u-custom-font u-hidden u-countdown-separator-2">:</div>
             <div class="u-countdown-hours u-countdown-item u-spacing-10">
-              <div class="u-countdown-counter u-custom-font u-countdown-counter-3"><div class="u-countdown-number">0</div><div class="u-countdown-number">4</div></div>
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-3"><div class="u-countdown-number">1</div><div class="u-countdown-number">4</div></div>
               <div class="u-countdown-label u-custom-font u-countdown-label-3">Hours</div>
             </div>
             <div class="u-countdown-separator u-custom-font u-countdown-separator-3">:</div>
             <div class="u-countdown-item u-countdown-minutes u-spacing-10">
-              <div class="u-countdown-counter u-custom-font u-countdown-counter-4"><div class="u-countdown-number">3</div><div class="u-countdown-number">2</div></div>
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-4"><div class="u-countdown-number">4</div><div class="u-countdown-number">5</div></div>
               <div class="u-countdown-label u-custom-font u-countdown-label-4">Minutes</div>
             </div>
             <div class="u-countdown-separator u-custom-font u-countdown-separator-4">:</div>
             <div class="u-countdown-item u-countdown-seconds u-spacing-10">
-              <div class="u-countdown-counter u-custom-font u-countdown-counter-5"><div class="u-countdown-number">1</div><div class="u-countdown-number">0</div></div>
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-5"><div class="u-countdown-number">5</div><div class="u-countdown-number">4</div></div>
               <div class="u-countdown-label u-custom-font u-countdown-label-5">Seconds</div>
             </div>
             <div class="u-countdown-separator u-custom-font u-hidden u-countdown-separator-5">:</div>
@@ -154,12 +154,12 @@ TEDx community">
           <br>Following the resounding success of our first edition, we returned even stronger on October 7, 2018, for our second edition. It was a day filled with insightful talks, engaging discussions, and the celebration of youthful creativity. <br>
           <br>Today, we proudly present the third edition of TEDxADIS Muroor Youth, building on the foundation of our past experiences and pushing the boundaries of inspiration further than ever before. As we continue to evolve and innovate, we invite you to be a part of this exciting journey towards a brighter and more dynamic future. Welcome to TEDxADIS Muroor Youth 2023!<br>
         </p>
-        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-8aaf">
+        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-07ca">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-            <li data-u-target="#carousel-8aaf" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-8aaf" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-8aaf" data-u-slide-to="2" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-8aaf" data-u-slide-to="3" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-07ca" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-07ca" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-07ca" data-u-slide-to="2" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-07ca" data-u-slide-to="3" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
           </ol>
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
@@ -205,7 +205,7 @@ TEDx community">
               <style data-mode="XS"></style>
             </div>
           </div>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-8aaf" role="button" data-u-slide="prev">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-07ca" role="button" data-u-slide="prev">
             <span aria-hidden="true">
               <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
 c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
@@ -217,7 +217,7 @@ c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.3
 c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
             </span>
           </a>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-8aaf" role="button" data-u-slide="next">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-07ca" role="button" data-u-slide="next">
             <span aria-hidden="true">
               <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
